--- a/DataWagon_2_3_WagonWizards.ipynb
+++ b/DataWagon_2_3_WagonWizards.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7htkzbJsNGfWNt5Vdh+0f",
+      "authorship_tag": "ABX9TyOHCpJ88nnFVOXl5dmKTN41",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
         "id": "int2ZjLIDNtU"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf"
+      ]
     }
   ]
 }
