--- a/DataWagon_2_3_WagonWizards.ipynb
+++ b/DataWagon_2_3_WagonWizards.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHCpJ88nnFVOXl5dmKTN41",
+      "authorship_tag": "ABX9TyNly8k1kZsL5SOLRGmdMGXi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "int2ZjLIDNtU"
       },
       "outputs": [],
       "source": [
+        "#@title Импорт библиотек\n",
         "import tensorflow as tf"
       ]
     }
