--- a/DataWagon_2_3_WagonWizards.ipynb
+++ b/DataWagon_2_3_WagonWizards.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNly8k1kZsL5SOLRGmdMGXi",
+      "authorship_tag": "ABX9TyMthQ1YvXNNg1dAr5rX+v4h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
       "outputs": [],
       "source": [
         "#@title Импорт библиотек\n",
-        "import tensorflow as tf"
+        "import tensorflow as tf\n",
+        "import os"
       ]
     }
   ]
