create special folder for files in train_1

--- a/train_1/task2_base_model.ipynb
+++ b/train_1/task2_base_model.ipynb
@@ -122,6 +122,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of          plan_date  wagnum   date_kap   date_dep  kod_vrab date_pl_rem  \\\n",
+       "0       2022-08-01    1071        NaT 2020-02-16         0  2023-02-16   \n",
+       "1       2022-08-02    1071        NaT 2020-02-16         0  2023-02-16   \n",
+       "2       2022-08-03    1071        NaT 2020-02-16         0  2023-02-16   \n",
+       "3       2022-08-04    1071        NaT 2020-02-16         0  2023-02-16   \n",
+       "4       2022-08-05    1071        NaT 2020-02-16         0  2023-02-16   \n",
+       "...            ...     ...        ...        ...       ...         ...   \n",
+       "1052920 2023-01-27    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
+       "1052921 2023-01-28    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
+       "1052922 2023-01-29    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
+       "1052923 2023-01-30    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
+       "1052924 2023-01-31    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
+       "\n",
+       "         id_road_disl  st_id_dest  id_road_dest  st_id_send  id_road_send  \\\n",
+       "0                  42          22            42       11470            42   \n",
+       "1                  42       11663             0       11470            42   \n",
+       "2                  42       11663             0       11470            42   \n",
+       "3                  42       11663             0       11470            42   \n",
+       "4                  42       11663             0       11470            42   \n",
+       "...               ...         ...           ...         ...           ...   \n",
+       "1052920            37          22            37       12647            37   \n",
+       "1052921            37          22            37       12647            37   \n",
+       "1052922            37          22            37       12647            37   \n",
+       "1052923            37          22            37       12647            37   \n",
+       "1052924            37          22            37       12647            37   \n",
+       "\n",
+       "         ost_prob  isload  fr_id  last_fr_id  distance  \n",
+       "0           36899       0   5032        1413        -1  \n",
+       "1           36899       1   1204        1204       998  \n",
+       "2           36711       1   1204        1204       989  \n",
+       "3           36711       1   1204        1204       939  \n",
+       "4           36711       1   1204        1204       963  \n",
+       "...           ...     ...    ...         ...       ...  \n",
+       "1052920     87693       0   5032        3253        -1  \n",
+       "1052921     87693       0   5032        3253        -1  \n",
+       "1052922     87693       0   5032        3253        -1  \n",
+       "1052923     87693       0   5032        3253        -1  \n",
+       "1052924     87693       0   5032        3253        -1  \n",
+       "\n",
+       "[6250933 rows x 16 columns]>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dislok.head"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": false,
