добавил вычисление метрики

--- a/train_1/task2_base_model.ipynb
+++ b/train_1/task2_base_model.ipynb
@@ -122,61 +122,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wagnum</th>\n",
+       "      <th>model</th>\n",
+       "      <th>rod_id</th>\n",
+       "      <th>gruz</th>\n",
+       "      <th>cnsi_gruz_capacity</th>\n",
+       "      <th>cnsi_volumek</th>\n",
+       "      <th>tara</th>\n",
+       "      <th>date_build</th>\n",
+       "      <th>srok_sl</th>\n",
+       "      <th>zavod_build</th>\n",
+       "      <th>date_iskl</th>\n",
+       "      <th>cnsi_probeg_dr</th>\n",
+       "      <th>cnsi_probeg_kr</th>\n",
+       "      <th>kuzov</th>\n",
+       "      <th>telega</th>\n",
+       "      <th>tormoz</th>\n",
+       "      <th>tipvozd</th>\n",
+       "      <th>tippogl</th>\n",
+       "      <th>norma_km</th>\n",
+       "      <th>ownertype</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3218</th>\n",
+       "      <td>26318</td>\n",
+       "      <td>12-600-04</td>\n",
+       "      <td>1</td>\n",
+       "      <td>682</td>\n",
+       "      <td>682</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>240</td>\n",
+       "      <td>1992-12-25</td>\n",
+       "      <td>2022-04-27</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023-02-16</td>\n",
+       "      <td>160</td>\n",
+       "      <td>160</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>110000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19128</th>\n",
+       "      <td>28344</td>\n",
+       "      <td>12-132</td>\n",
+       "      <td>1</td>\n",
+       "      <td>700</td>\n",
+       "      <td>700</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>240</td>\n",
+       "      <td>2003-08-12</td>\n",
+       "      <td>2024-12-24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-12-14</td>\n",
+       "      <td>110</td>\n",
+       "      <td>160</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21526</th>\n",
+       "      <td>8099</td>\n",
+       "      <td>11-286</td>\n",
+       "      <td>0</td>\n",
+       "      <td>670</td>\n",
+       "      <td>670</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>270</td>\n",
+       "      <td>1995-08-31</td>\n",
+       "      <td>2027-10-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>110</td>\n",
+       "      <td>160</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32353</th>\n",
+       "      <td>33350</td>\n",
+       "      <td>12-9850-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>750</td>\n",
+       "      <td>750</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>248</td>\n",
+       "      <td>2014-10-27</td>\n",
+       "      <td>2047-02-05</td>\n",
+       "      <td>19</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>250</td>\n",
+       "      <td>500</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>5308</td>\n",
+       "      <td>11-276</td>\n",
+       "      <td>0</td>\n",
+       "      <td>680</td>\n",
+       "      <td>680</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>260</td>\n",
+       "      <td>1995-09-17</td>\n",
+       "      <td>2027-09-28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>110</td>\n",
+       "      <td>160</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>160000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<bound method NDFrame.head of          plan_date  wagnum   date_kap   date_dep  kod_vrab date_pl_rem  \\\n",
-       "0       2022-08-01    1071        NaT 2020-02-16         0  2023-02-16   \n",
-       "1       2022-08-02    1071        NaT 2020-02-16         0  2023-02-16   \n",
-       "2       2022-08-03    1071        NaT 2020-02-16         0  2023-02-16   \n",
-       "3       2022-08-04    1071        NaT 2020-02-16         0  2023-02-16   \n",
-       "4       2022-08-05    1071        NaT 2020-02-16         0  2023-02-16   \n",
-       "...            ...     ...        ...        ...       ...         ...   \n",
-       "1052920 2023-01-27    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
-       "1052921 2023-01-28    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
-       "1052922 2023-01-29    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
-       "1052923 2023-01-30    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
-       "1052924 2023-01-31    9554 2009-10-13 2021-08-23         1  2024-08-23   \n",
+       "       wagnum       model  rod_id  gruz  cnsi_gruz_capacity  cnsi_volumek  \\\n",
+       "3218    26318   12-600-04       1   682                 682          85.0   \n",
+       "19128   28344      12-132       1   700                 700          88.0   \n",
+       "21526    8099      11-286       0   670                 670         138.0   \n",
+       "32353   33350  12-9850-02       1   750                 750          90.0   \n",
+       "81       5308      11-276       0   680                 680         122.0   \n",
        "\n",
-       "         id_road_disl  st_id_dest  id_road_dest  st_id_send  id_road_send  \\\n",
-       "0                  42          22            42       11470            42   \n",
-       "1                  42       11663             0       11470            42   \n",
-       "2                  42       11663             0       11470            42   \n",
-       "3                  42       11663             0       11470            42   \n",
-       "4                  42       11663             0       11470            42   \n",
-       "...               ...         ...           ...         ...           ...   \n",
-       "1052920            37          22            37       12647            37   \n",
-       "1052921            37          22            37       12647            37   \n",
-       "1052922            37          22            37       12647            37   \n",
-       "1052923            37          22            37       12647            37   \n",
-       "1052924            37          22            37       12647            37   \n",
+       "       tara date_build    srok_sl  zavod_build  date_iskl  cnsi_probeg_dr  \\\n",
+       "3218    240 1992-12-25 2022-04-27            5 2023-02-16             160   \n",
+       "19128   240 2003-08-12 2024-12-24            0 2022-12-14             110   \n",
+       "21526   270 1995-08-31 2027-10-01            1        NaT             110   \n",
+       "32353   248 2014-10-27 2047-02-05           19        NaT             250   \n",
+       "81      260 1995-09-17 2027-09-28            1        NaT             110   \n",
        "\n",
-       "         ost_prob  isload  fr_id  last_fr_id  distance  \n",
-       "0           36899       0   5032        1413        -1  \n",
-       "1           36899       1   1204        1204       998  \n",
-       "2           36711       1   1204        1204       989  \n",
-       "3           36711       1   1204        1204       939  \n",
-       "4           36711       1   1204        1204       963  \n",
-       "...           ...     ...    ...         ...       ...  \n",
-       "1052920     87693       0   5032        3253        -1  \n",
-       "1052921     87693       0   5032        3253        -1  \n",
-       "1052922     87693       0   5032        3253        -1  \n",
-       "1052923     87693       0   5032        3253        -1  \n",
-       "1052924     87693       0   5032        3253        -1  \n",
+       "       cnsi_probeg_kr  kuzov  telega  tormoz tipvozd  tippogl  norma_km  \\\n",
+       "3218              160      2       9       3       6       11    110000   \n",
+       "19128             160      2       9       2       1       12         0   \n",
+       "21526             160      2       9       2       1        1    160000   \n",
+       "32353             500      2      11       2       7       12    250000   \n",
+       "81                160      2       9       2       1       11    160000   \n",
        "\n",
-       "[6250933 rows x 16 columns]>"
+       "       ownertype  \n",
+       "3218           0  \n",
+       "19128          0  \n",
+       "21526          1  \n",
+       "32353          1  \n",
+       "81             1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dislok.head"
+    "# dislok.head()\n",
+    "# pr_rem.head()\n",
+    "# wag_prob.head()\n",
+    "wag_param.head()\n",
+    "# target.head()\n",
+    "# tr_rem.head()"
    ]
   },
   {
